--- a/LOGI.html
+++ b/LOGI.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="LOGI.css">
+    <link rel="stylesheet" href="shared.css">
+    <link rel="shortcut icon" href="icon.jpeg">
     <title>LogiBiz</title>
 </head>
 <body>
     <header class="main-header">
         <div>
-            <a class="brand_logo" href="index.html">LogiBiz</a>
+            <a class="brand-logo" href="index.html">LogiBiz</a>
         </div>
         <nav class="main-nav">
             <ul class="main-nav-links">
                 <li class="main-nav-link">
-                    <a href="">Customers</a>
+                    <a href="/customers/index.html">Customers</a>
                 </li>
                 <li class="main-nav-link">
-                    <a href="">Packages</a>
+                    <a href="packages/INDE.html">Packages</a>
                 </li>
                 <li class="main-nav-link main-nav-link-cta">
-                    <a href="">Join Now</a>
+                    <a href="join-now/index.html">Join Now</a>
                 </li>
             </ul>
         </nav>
