--- a/LOGI.html
+++ b/LOGI.html
@@ -12,18 +12,18 @@
 <body>
     <header class="main-header">
         <div>
-            <a class="brand-logo" href="index.html">LogiBiz</a>
+            <a class="brand-logo" href="LOGI.html">LogiBiz</a>
         </div>
         <nav class="main-nav">
             <ul class="main-nav-links">
                 <li class="main-nav-link">
-                    <a href="/customers/index.html">Customers</a>
+                    <a href="Customer/customers.html">Customers</a>
                 </li>
                 <li class="main-nav-link">
-                    <a href="packages/INDE.html">Packages</a>
+                    <a href="packages/packages.html">Packages</a>
                 </li>
                 <li class="main-nav-link main-nav-link-cta">
-                    <a href="join-now/index.html">Join Now</a>
+                    <a href="Join/join-now.html">Join Now</a>
                 </li>
             </ul>
         </nav>
@@ -75,19 +75,19 @@
             </div>
         </div>
         <div id="key-features">
-            <h2 class="key-features-title">Great Reasons to stick around</h2>
+            <h1 class="key-features-title">Great Reasons to stick around</h1>
             <ul class="key-features-list">
-                <li class="key-feature">
-                    <div></div>
-                    <p>830,000 Trusting Customers</p>
+                <li>
+                    <img width="80px" height="80px" src="" id="pic"><br>
+                    <span>830,000 Trusting Customers</span>
                 </li>
-                <li class="key-feature">
-                    <div></div>
-                    <p>99% uptime guarantee</p>
+                <li>
+                    <img width="80px" height="80px" src="" id="pic"><br>
+                    <span>99% uptime guarantee</span>
                 </li>
-                <li class="key-feature">
-                    <div></div>
-                    <p>Reliable riders</p>
+                <li>
+                    <img width="80px" height="80px" src="" id="pic"><br>
+                    <span>Reliable riders</span>
                 </li>
             </ul>
         </div>
