--- a/LOGI.html
+++ b/LOGI.html
@@ -56,7 +56,7 @@
                         <li>5 riders</li>
                         <li>lorem lorem</li>
                         <li>lorem lorem</li>
-                        <li>lorem lorem</li>
+                        
                     </ul>
                     <button>CHOOSE PLAN</button>
                 </article>
@@ -78,15 +78,15 @@
             <h1 class="key-features-title">Great Reasons to stick around</h1>
             <ul class="key-features-list">
                 <li>
-                    <img width="80px" height="80px" src="" id="pic"><br>
+                    <img width="80px" height="80px" src="logistics.png" id="pic"><br>
                     <span>830,000 Trusting Customers</span>
                 </li>
                 <li>
-                    <img width="80px" height="80px" src="" id="pic"><br>
+                    <img width="80px" height="80px" src="delivery-truck.png" id="pic"><br>
                     <span>99% uptime guarantee</span>
                 </li>
                 <li>
-                    <img width="80px" height="80px" src="" id="pic"><br>
+                    <img width="80px" height="80px" src="delivery-man.png" id="pic"><br>
                     <span>Reliable riders</span>
                 </li>
             </ul>
