--- a/join-now.html
+++ b/join-now.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="join-now.css">
-    <link rel="stylesheet" href="shared.css">
+    <link rel="stylesheet" href="../shared.css">
     <link rel="shortcut icon" href="icon.jpeg">
     <title>JOIN NOW</title>
 </head>
@@ -32,7 +32,7 @@
 
     <header class="dive">
         Awesome! Let's dive right in! 
-    </header>
+    </header><br>
 
     <form class="Form">
 
