--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="LOGI.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="shared.css">
     <link rel="shortcut icon" href="icon.jpeg">
     <title>LogiBiz</title>
@@ -12,18 +12,18 @@
 <body>
     <header class="main-header">
         <div>
-            <a class="brand-logo" href="LOGI.html">LogiBiz</a>
+            <a class="brand-logo" href="style.html">LogiBiz</a>
         </div>
         <nav class="main-nav">
             <ul class="main-nav-links">
                 <li class="main-nav-link">
-                    <a href="Customer/customers.html">Customers</a>
+                    <a href="customers.html">Customers</a>
                 </li>
                 <li class="main-nav-link">
-                    <a href="packages/packages.html">Packages</a>
+                    <a href="packages.html">Packages</a>
                 </li>
                 <li class="main-nav-link main-nav-link-cta">
-                    <a href="Join/join-now.html">Join Now</a>
+                    <a href="join-now.html">Join Now</a>
                 </li>
             </ul>
         </nav>
