--- a/packages.html
+++ b/packages.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Packages</title>
-    <link rel="stylesheet" href="../shared.css">
+    <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="packages.css">
 </head>
 <body>
