--- a/customers.html
+++ b/customers.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customers</title>
-    <link rel="stylesheet" href="../shared.css">
+    <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="customers.css">
     <link rel="shortcut icon" href="icon.jpeg">
 </head>
