--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="">
-    <link rel="stylesheet" href="/LOGI/LOGI.css">
-    <link rel="stylesheet" href="/LOGI/shared.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="shared.css">
     <link rel="shortcut icon" href="icon.jpeg">
     <title>LogiBiz</title>
 </head>
 <body>
     <header class="main-header">
         <div>
-            <a class="brand-logo" href="/LOGI/LOGI.html">LogiBiz</a>
+            <a class="brand-logo" href="index.html">LogiBiz</a>
         </div>
         <nav class="main-nav">
             <ul class="main-nav-links">
                 <li class="main-nav-link">
-                    <a href="Customer/customers.html">Customers</a>
+                    <a href="customers.html">Customers</a>
                 </li>
                 <li class="main-nav-link">
-                    <a href="packages/packages.html">Packages</a>
+                    <a href="packages.html">Packages</a>
                 </li>
                 <li class="main-nav-link main-nav-link-cta">
-                    <a href="Join/join-now.html">Join Now</a>
+                    <a href="join-now.html">Join Now</a>
                 </li>
             </ul>
         </nav>
@@ -79,15 +79,15 @@
             <h1 class="key-features-title">Great Reasons to stick around</h1>
             <ul class="key-features-list">
                 <li>
-                    <img  src="/LOGI/logistics.png" id="pic"><br>
+                    <img  src="logistics.png" id="pic"><br>
                     <span class="span">830,000 Trusting Customers</span>
                 </li>
                 <li>
-                    <img  src="/LOGI/delivery-truck.png" id="pic"><br>
+                    <img  src="delivery-truck.png" id="pic"><br>
                     <span class="span">99% uptime guarantee</span>
                 </li>
                 <li>
-                    <img src="/LOGI/delivery-man.png" id="pic"><br>
+                    <img src="delivery-man.png" id="pic"><br>
                     <span class="span">Reliable riders</span>
                 </li>
             </ul>
